@@ -5,7 +5,7 @@ fix/loyaltycascade
     :summary: Halts loyalty cascades where dwarves are fighting dwarves.
     :tags: fort bugfix units
 
-This tool aborts loyalty cascades by fixing units who consider their own
+This tool neutralizes loyalty cascades by fixing units who consider their own
 civilization to be the enemy.
 
 Usage
